# ask-your-datasheet

./: .pre-commit-config.yaml  README.md  pyproject.toml  tasks.py
ask-your-datasheet/: README.md
docs/: conf.py  index.rst
examples/: README.md
examples/get_started/: document_retriever.py  embedd_pdf.py  embeddings_examples.py  hello_world.py  play_with_chromadb.py  rag_with_llm.py  read_embedd_pdf.py  text_loader.py
